style.css
@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");

* {
  font-family: "Press Start 2P", cursive;
}


.app {
  height: 100vh;
  width: 100%;
  max-width: 100%;
  overflow-x: hidden;
}

header {
  overflow: hidden;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border: black 3px solid;
  background-color: rgba(128, 128, 128, 0.222);
}

header .logo {
  font-size: 30px;
  padding: 10px;
  background-color: red;
  background-image: linear-gradient(
    120deg,
    rgb(223, 33, 36) 32%,
    rgb(186, 195, 13) 24%,
    rgba(48, 20, 160, 0.929) 50%,
    rgb(5, 43, 255) 68%
  );
  background-size: 100%;
  -webkit-background-clip: text;
  -moz-background-clip: text;
  -webkit-text-fill-color: transparent;
  -moz-text-fill-color: transparent;
}

header .credits{
  font-size: 15px;
  font-weight: bold;
}

header .credits a{
  font-size: 20px;
  text-decoration: none;
  color: black;
}

.underline-name{
  text-decoration: underline !important;
}

header img {
  max-width: 45px;
  text-decoration: none;
  vertical-align: middle;
}

header .types {
  display: flex;
  list-style-type: none;
  margin-right: 10px;
}

header .search input {
  border: 0;
  outline: none;
  height: 46px;
  padding: 8px 8px;
  background-color: rgba(255, 255, 255, 0.624);
  color: #000000;
  border: 2px rgb(178, 3, 3) solid;
  font-size: 10px;
  max-width: 78%;
}

header .search button {
  padding: 8px, 8px;
  vertical-align: middle;
  text-align: center;
  background-color: red;
  border-radius: 12px 0 0 12px;
  font-size: 28px;
}

.dark-mode-button button{
  padding: 5px;
  width: 40px;
  font-size: 24px;
  background-color: black;
  border-radius: 12px 0 0 12px;
}

.cards {
  overflow: hidden;
  width: 100%;
  height: 100%;
  display: flex;
  padding: 5px;
  flex-wrap: wrap;
  overflow-y: auto;
  justify-content: center
}

.card {
  overflow: hidden;
  height: 600px;
  width: 340px;
  border: 8px black solid;
  background: rgba(176, 176, 176, 0.202);
  text-align: center;
  align-items: center;
  padding: 10px;
  margin: 45px;
}

.card img {
  width: 100%;
}

.card img:hover {
  animation: bounce 0.7s linear
  ;
}

@keyframes bounce {
  20% {
    transform: translateY(-8px);
  }
  40% {
    transform: translateY(0px);
  }
  60% {
    transform: translateY(-14px);
  }
  100%{
    transform: translateY(-0px);
  }
}

.name-poke {
  font-size: 30px;
  margin: 15px;
  font-weight: 900;
}

.id-poke {
  font-size: 40px;
  margin: 15px;
  padding: 5px;
  color: red;
}

.type-poke {
  font-size: 26px;
  margin: 25px;
  color: blue;
  font-weight: bold;
}

.types-dropdown{
  display: none;
}

.hide{
  display: none;
}

@media (max-width: 1400px)
{
  header .types{
    font-size: 10px;
    display: none;
  }

  .types-dropdown{
    display: block;
    margin: 30px;
  }
  
}

@media (max-width: 958px) {
  header{
    flex-direction: column;
    font-size: 10px;
    text-align: center;
    align-items: center;
    max-width: 100%;
  }
  header input{
    width: 70%;
  }

  header .search button{
    width: 30%;
    text-align: center;
    font-size: 30px;
  }

  header .types{
    display: none;
  }

  .types-dropdown{
    display: block;
    margin: 30px;
  }

  .name-poke{
    font-size: 20px;
    max-width: 100%;
  }

  .card{
    height: 500px
  }

  .type-poke{
    font-size: 18px;  }
}

